tests/NormalTests/paczka1/fuzzy1/35011962.err
Error in line 20: qr8AxSrnM S744 -3,2
Error in line 22: ENAVFI S780 42,79
Error in line 24: ENAVFI S32 28,3
Error in line 11: qr8AxSrnM S744 560,3
Error in line 29: qr8AxSrnM S32 34,5
Error in line 21: S744 S744 67,7
